fixed #backButton position and removed .visible-lg from span in #middle that was causing errors

--- a/webapp/client/app/main/main.styl
+++ b/webapp/client/app/main/main.styl
@@ -60,6 +60,8 @@ body {
 
 #slide {
   margin-top: 55px
+  // uncomment for production
+  //background-image: url("/../assets/images/slide1.jpg")
   background-image: url("../../../assets/images/slide1.jpg")
   background-size: cover
   height: 500px
@@ -246,8 +248,10 @@ span#smallFont {
 
 #capaPage,
 #prodPage,
-#servPage {
-  height: 700px
+#servPage,
+#abouPage,
+#contPage {
+  height: 1000px
   margin-top: 10px
   background-color: color4
   div {
@@ -259,11 +263,11 @@ span#smallFont {
 #backButton {
   font-family: 'Nunito', sans-serif
   color: color4
-  margin-top: 60px
+  margin-top: 10px
 
   h2 {
     padding: 10px
-    width: 260px
+    width: 320px
     font-size: 24px
     background: black
   }
